--- a/e2e/evm-evm/example/cfg/config_evm-evm.json
+++ b/e2e/evm-evm/example/cfg/config_evm-evm.json
@@ -9,7 +9,8 @@
       "from": "0xff93B45308FD417dF303D6515aB04D9e89a750Ca",
       "bridge": "0xd606A00c1A39dA53EA7Bb3Ab570BBE40b156EB66",
       "erc20Handler": "0x05C5AFACf64A6082D4933752FfB447AED63581b1",
-      "genericHandler": "0x08CFcF164dc2C4AB1E0966F236E87F913DE77b69",
+      "erc721Handler": "0x08907B389ECA69E7cF2BC82614C1e9CdB4936304",
+      "genericHandler": "0x77d273266ee4859b8564562A72E433fe5C0D9F44",
       "gasLimit": 9000000,
       "maxGasPrice": 20000000000,
       "blockConfirmations": 10
@@ -22,7 +23,8 @@
       "from": "0xff93B45308FD417dF303D6515aB04D9e89a750Ca",
       "bridge": "0xd606A00c1A39dA53EA7Bb3Ab570BBE40b156EB66",
       "erc20Handler": "0x05C5AFACf64A6082D4933752FfB447AED63581b1",
-      "genericHandler": "0x08CFcF164dc2C4AB1E0966F236E87F913DE77b69",
+      "erc721Handler": "0x08907B389ECA69E7cF2BC82614C1e9CdB4936304",
+      "genericHandler": "0x77d273266ee4859b8564562A72E433fe5C0D9F44",
       "gasLimit": 9000000,
       "maxGasPrice": 20000000000,
       "blockConfirmations": 10
